Changes to fig2dev
===============================================================================
Version 3.2
===============================================================================
Patchlevel Xx (Xxx 20xx)

BUGS FIXED:
	Ticket numbers refer to https://sourceforge.net/p/mcj/tickets/#.
	o Accept text and ellipse angles only within -2*pi to 2*pi. Fixes #76.
	o Allow -1 as default TeX font, not only 0. Fixes #71, #75, #81.
	o Do not allow ASCII NUL anywhere in input. Fixes #65, #68, #73, #80.
	o Use getline() to improve input scanning.
	  Fixes tickets #58, #59, #61, #62, #67, #78, #79.
	o Correctly scan embedded pdfs for /MediaBox value.
	o Convert polygons having too few points to polylines. Ticket #56.
	o Reject huge arrow types causing integer overflow. Ticket #57.
	o Allow Fig v2 text strings ending with multiple ^A. Ticket #55.
	o Embed images in pdfs with their original compression type, i.e., leave
	  the gs switch "-dAutoFilterColorImages" at its default value "true".

-------------------------------------
Patchlevel 7b (Nov 2019)

NEW FEATURES:
	o A X color database is not needed, but can be provided. The location of
	  the database can be given at compile time, default /etc/X11/rgb.txt.

BUGS FIXED:
	Ticket numbers refer to https://sourceforge.net/p/mcj/tickets/#.
	Debian bug numbers refer to https://bugs.debian.org/#.
	o Do not clip objects with line-thickness 0 having arrows. Ticket #53.
	o Do not segfault on circle/half circle arrowheads with a magnification
	  larger 42. Always draw circle arrowheads with 40 points. Ticket #52.
	o Allow circles or ellipses with negative radii. Ticket #49.
	o Avoid "dimension too large error" with tikz output by avoiding
	  coordinate values smaller than -16383.
	o Make tests (test1.c) work with -fsanitize=address compiler option.
	o Obey join-style of lines in tikz output.
	o Pass utf8-strings to svg output, escape some chars (<>&).
	o Accept inclined boxes and change them to polygons. Fixes ticket #43.