@@ -430,7 +430,7 @@ AT_SETUP([reject out of range text angle, ticket #76])
 AT_KEYWORDS([read.c pstricks])
 AT_CHECK([fig2dev -L pstricks <<EOF
 FIG_FILE_TOP
-4 0 0 50 -1 -1 12 9e26 0 150 405 0 0 Very slanted text\001
+4 0 0 50 0 -1 12 9e26 0 150 405 0 0 Very slanted text\001
 EOF
 ], 1, ignore, [Invalid text object at line 10.
 ])
@@ -445,6 +445,17 @@ FIG_FILE_TOP
 EOF
 ], 1, ignore, [Invalid line object at line 10.
 ])
+AT_CLEANUP
+
+AT_SETUP([allow files end without eol, tickets #83, #84])
+AT_KEYWORDS([read.c])
+AT_CHECK([AS_ECHO_N(["FIG_FILE_TOP
+4 0 0 50 0 -1 12 0 0 150 405 0 0 No end-of-line here -->"]) | \
+	fig2dev -L box], 0, ignore)
+AT_CHECK([AS_ECHO_N(["FIG_FILE_TOP
+4 0 0 50 0 -1 12 0 0 150 405 0 0 Start string
+No end-of-line after one backslash --> \\"]) | \
+	fig2dev -L box], 0, ignore)
 AT_CLEANUP
 
 AT_BANNER([Dynamically allocate picture file name.])
